Changed responsive design.

--- a/reset.css
+++ b/reset.css
@@ -8,6 +8,7 @@
   --pale-blue: #F5F7FF;
   --med-blue: #7280A7;
   --dark-blue: #1F2F56;
+  --white: #FFF;
   --body-font: 'Red Hat Display', 'Arial', sans-serif;
 }
 
