--- a/style.css
+++ b/style.css
@@ -8,6 +8,10 @@ body {
 	color: var(--med-blue);
 }
 
+.pad {
+	padding-top: 15px;
+	padding-bottom: 15px;
+}
 
 /*Font Styles*/
 h1 {
@@ -16,13 +20,16 @@ h1 {
 	font-weight: 900;
 }
 
-.boldText {
-
+.planText {
+	font-weight: 900;
+	color: var(--dark-blue);
 }
 
 
 /*Container Styles*/
-
+.order-summary {
+	min-height: calc(100vh - 41px);
+}
 
 .order-summary__holder {
 	max-width: 500px;
@@ -34,7 +41,7 @@ h1 {
 
 .order-summary__content-container {
 	max-width: 450px;
-	padding: 30px 15px;
+	padding: 15px;
 	margin: 0 auto;
 	text-align: center;
 }
@@ -45,6 +52,12 @@ h1 {
 	align-items: center;
 	background-color: var(--pale-blue);
 	border-radius: 10px;
+	padding: 15px;
+}
+
+.annual-plan__prices {
+	display: flex;
+	flex-direction: column;
 }
 
 /*Button Styles*/
@@ -56,36 +69,47 @@ h1 {
 .button__blue a {
 	padding: 15px;
 	background-color: var(--bright-blue);
-	border-radius: 10px
-	box-shadow: 0px 8px 15px -2px rgba(245, 247, 255, 0.3)
+	border-radius: 10px;
 	font-weight: 700;
 	color: var(--pale-blue);
+}
+
+.button__blue {
+	box-shadow: -1px 23px 15px 5px #DDDFE6;
+	padding-top: 15px;
+}
+
+.annual-plan__button a {
+	text-decoration: underline;
+	color: var(--bright-blue);
+	font-weight: 700;
 }
 
 
 /*Order Summary Styles*/
 .order-summary__image-container img {
+	display: block;
 	width: 100%;
 	overflow: hidden;
+	border-top-right-radius: 10px;
+	border-top-left-radius: 10px;
 }
 
 .annual-plan__icon img {
-	padding: 10px;
 	border-radius: 25px;
 	background-color: var(--light-blue);
 }
 
 
 /*Attribution Styles*/
+.attribution {
+	text-align: center;
+	padding: 10px;
+}
+
 
 
 /*Media Queries*/
-@media screen and (max-width: 375px){
-	.order-summary__holder {
-		max-width: 450px;
-	}
+@media screen and (max-width: 375px) {
 
-	.order-summary__content-container {
-	padding: 50px 25px;
-	}
 }
