--- a/style.css
+++ b/style.css
@@ -8,21 +8,21 @@ body {
 	color: var(--med-blue);
 }
 
-.pad {
-	padding-top: 15px;
-	padding-bottom: 15px;
-}
-
 /*Font Styles*/
 h1 {
-	font-size: 1.5rem;
+	font-size: 1.7rem;
 	color: var(--dark-blue);
 	font-weight: 900;
+	padding-top: 20px;
 }
 
 .planText {
 	font-weight: 900;
 	color: var(--dark-blue);
+}
+
+.order-summary__content-container p {
+	padding: 20px 30px;
 }
 
 
@@ -32,7 +32,7 @@ h1 {
 }
 
 .order-summary__holder {
-	max-width: 500px;
+	max-width: 450px;
 	width: calc(100% - 50px);
 	background-color: var(--white);
 	border-radius: 10px;
@@ -40,7 +40,7 @@ h1 {
 }
 
 .order-summary__content-container {
-	max-width: 450px;
+	max-width: 400px;
 	padding: 15px;
 	margin: 0 auto;
 	text-align: center;
@@ -75,13 +75,23 @@ h1 {
 }
 
 .button__blue {
-	box-shadow: -1px 23px 15px 5px #DDDFE6;
-	padding-top: 15px;
+	box-shadow: -1px 15px 15px 3px #3829e038;
+	margin-top: 30px;
+	border-radius: 10px;
 }
 
 .annual-plan__button a {
 	text-decoration: underline;
 	color: var(--bright-blue);
+	font-weight: 700;
+	font-size: 0.9rem;
+}
+
+.button__faded {
+	padding: 30px 0px;
+}
+
+.button__faded a {
 	font-weight: 700;
 }
 
