Added hover styling.

--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
 /*Global Styles*/
 body {
-	background-image: url(img/pattern-background-mobile.svg);
-	background-size: cover;
-	background-repeat: no-repeat;
-	background-position: center;
+	background-image: url(img/pattern-background-desktop.svg);
+	background-size: auto;
+	background-repeat: repeat-x;
+	background-position: top;
 	background-color: var(--light-blue);
 	color: var(--med-blue);
 }
@@ -29,6 +29,9 @@ h1 {
 /*Container Styles*/
 .order-summary {
 	min-height: calc(100vh - 41px);
+	display: flex;
+	align-items: center;
+	justify-content: center;
 }
 
 .order-summary__holder {
@@ -48,11 +51,11 @@ h1 {
 
 .annual-plan__holder {
 	display: flex;
-	justify-content: space-evenly;
+	justify-content: flex-start;
 	align-items: center;
 	background-color: var(--pale-blue);
 	border-radius: 10px;
-	padding: 15px;
+	padding: 20px;
 }
 
 .annual-plan__prices {
@@ -80,11 +83,24 @@ h1 {
 	border-radius: 10px;
 }
 
+.button__blue:hover a {
+	background-color: rgba(56, 41, 224, 0.61);
+}
+
+.annual-plan__button {
+	margin-left: auto;
+}
+
 .annual-plan__button a {
 	text-decoration: underline;
 	color: var(--bright-blue);
 	font-weight: 700;
 	font-size: 0.9rem;
+}
+
+.annual-plan__button:hover a {
+	color: rgba(56, 41, 224, 0.61);
+	text-decoration: none;
 }
 
 .button__faded {
@@ -93,6 +109,10 @@ h1 {
 
 .button__faded a {
 	font-weight: 700;
+}
+
+.button__faded:hover a {
+	color: var(--dark-blue);
 }
 
 
@@ -108,6 +128,7 @@ h1 {
 .annual-plan__icon img {
 	border-radius: 25px;
 	background-color: var(--light-blue);
+	margin-right: 20px;
 }
 
 
@@ -121,5 +142,7 @@ h1 {
 
 /*Media Queries*/
 @media screen and (max-width: 375px) {
-
+	body {
+		background-image: url(img/pattern-background-mobile);
+	}
 }
