--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@ body {
 	background-position: top;
 	background-color: var(--light-blue);
 	color: var(--med-blue);
+	line-height: 1.5;
 }
 
 /*Font Styles*/
@@ -22,7 +23,9 @@ h1 {
 }
 
 .order-summary__content-container p {
-	padding: 20px 30px;
+	max-width: 300px;
+	margin: 0 auto;
+	padding: 20px 0px;
 }
 
 
@@ -150,7 +153,7 @@ h1 {
 		font-size: 1.5rem;
 	}
 
-	p, a {
+	span, .annual-plan__button a {
 		font-size: 0.8rem;
 	}
 }
